# welding-hybrid

./: .gitignore  Manifest.toml  Project.toml  README.md  pyproject.toml
results/: benchmark_report.txt
src/: WeldingHot.jl
src/julia/: WeldingHot.jl  contact_vi.jl  droplet_vi.jl  goldak_fdm.jl  robot_vi.jl  variational_core.jl
src/welding_hybrid/: __init__.py  benchmark.py  bridge.py  droplet.py  droplet_vi.py  gmaw.py  main.py  robot_vi.py  short_circuit.py  shortcircuit_vi.py  thermal.py  variational.py
tests/: test_smoke.py
