[project]
name = "welding-hybrid"
version = "1.0.0"
description = "工业焊接动力学模型 — Python/Julia 混合高性能实现"
readme = "README.md"
requires-python = ">=3.10"
authors = [{ name = "Welding Hybrid Project" }]
dependencies = [
    "numpy>=1.26",
    "scipy>=1.11",
    "matplotlib>=3.8",
    "juliacall>=0.9",    # Python→Julia 桥接; graceful fallback when Julia absent
]

[project.optional-dependencies]
dev = ["pytest>=7", "pytest-benchmark"]

[project.scripts]
welding-hybrid     = "welding_hybrid.main:main"
welding-benchmark  = "welding_hybrid.benchmark:run"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/welding_hybrid"]
